<resources>
    <string name="app_name">Conversor de unidades</string>
    <string name="conversor">Conversor</string>
    <string name="temperatura">Unidades de temperatura</string>
    <string name="distancia">Unidades de distancia</string>
    <string name="celfan">Centigrados a Fahrenheit</string>
    <string name="fancel">Fhrenheit a Centigrados</string>
    <string name="celkel">Centigrados a Kelvin</string>
    <string name="kelcel">Kelvin a Centigrados</string>
    <string name="convertir">Convertir</string>
    <string name="unidad">unidad</string>
    <string name="resultado">resultado</string>
</resources>
